<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="input_email">Input your e-mail</string>
    <string name="password">Password</string>
    <string name="input_password">Input your password</string>
    <string name="new_login_button">Create new login</string>
    <string name="login_button">Login</string>
    <string name="next">Next</string>
    <string name="start">Get It Started</string>

    <string name="welcome_title">Welcome abroad user! Let\'s sell new shoes today?</string>
    <string name="welcome_body">We are an Android application that will help you to sell your best shoes!\n\nPlease trust us and after this screen you will explore a would of new and innovate application. I am sure that you will like it.\n\nCan we start?\nPlease, click in \"Next\" button and come with us to sell shoes!</string>
    <string name="instructions_title">Before we start, I would like to explain how this application works:</string>
    <string name="instructions_body">1- In the first screen, it is possible to see all your shoes for sale.\n\n2- In the button bellow, you can add new shoes in the list.\n\n3- After that your list will be updated with the new shoes.\n\n4- Try to put more details as possible to sell more and more.\n\n5- Have fun and good sales!</string>
    <string name="plus_button">Plus button</string>
    <string name="shoe_list">Here is your shoe list. Enjoy!</string>

    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_list_title">Shoe List</string>
    <string name="shoe_detail_title">Shoe Detail</string>
    <string name="logout">Logout</string>

    <string name="shoe_name">Name:</string>
    <string name="input_shoe_name">Shoe Name</string>
    <string name="shoe_company">Company:</string>
    <string name="input_shoe_company">Shoe Company</string>
    <string name="shoe_size">Size:</string>
    <string name="input_shoe_size">Size</string>
    <string name="shoe_description">Description:</string>
    <string name="input_shoe_description">Shoe Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="shoe_name_item"><u>Name:</u></string>
    <string name="shoe_company_item"><u>Company:</u></string>
    <string name="shoe_size_item"><u>Size:</u></string>
    <string name="shoe_description_item"><u>Description:</u></string>

    <string name="save_error">Please, fill all the information correctly to save</string>
    <string name="save_succeed">Shoe saved!</string>
</resources>
